--- a/requirements-aliyun.txt
+++ b/requirements-aliyun.txt
@@ -5,5 +5,5 @@ PyNaCl==1.5.0
 # Optional (when showing the download URL)
 qrcode==8.0
 
-# `oss2` is required when uploading via Aliyun OSS.
-# Use `pip install -r requirements-aliyun.txt` to install.
+# Aliyun OSS utilities. Very large.
+oss2==2.19.0
